Continue working on check logs, create Checker class